--- a/demo.html
+++ b/demo.html
@@ -101,7 +101,7 @@
         <div class="mt-6 bg-gray-50 border border-gray-300 rounded-lg p-4">
             <h3 class="font-semibold text-gray-800 mb-2">Integration Code (already included below):</h3>
             <code class="text-xs text-gray-700 bg-white p-2 block rounded border">
-                &lt;script src="http://xsukax.net/captcha.js?site=274ef24b6a30d39"&gt;&lt;/script&gt;
+                &lt;script src="captcha.js?site=YOUR_SITE_ID"&gt;&lt;/script&gt;
             </code>
         </div>
 
@@ -112,7 +112,7 @@
     </div>
 
     <!-- IMPORTANT: Replace YOUR_SITE_ID with your actual Site ID -->
-    <script src="captcha.js?site=YOUR_SITE_ID"></script>
+    <script src="http://xsukax.net/captcha.js?site=274ef24b6a30d39"></script>
 
     <!-- Form Handling Script -->
     <script>
