--- a/demo.html
+++ b/demo.html
@@ -112,7 +112,7 @@
     </div>
 
     <!-- IMPORTANT: Replace YOUR_SITE_ID with your actual Site ID -->
-    <script src="http://xsukax.net/captcha.js?site=274ef24b6a30d39"></script>
+    <script src="https://xsukax.net/captcha.js?site=274ef24b6a30d39"></script>
 
     <!-- Form Handling Script -->
     <script>
